DX: modernize dev environment with `uv`

--- a/2021.12.13/ampform.ipynb
+++ b/2021.12.13/ampform.ipynb
@@ -48,7 +48,7 @@
    "source": [
     "%load_ext autoreload\n",
     "%autoreload\n",
-    "from functools import lru_cache\n",
+    "from functools import cache\n",
     "\n",
     "import ampform\n",
     "import graphviz\n",
@@ -304,7 +304,7 @@
     "    return expr\n",
     "\n",
     "\n",
-    "@lru_cache(maxsize=None)\n",
+    "@cache\n",
     "def get_amplitude(\n",
     "    name,\n",
     "    doit,\n",
@@ -327,7 +327,7 @@
     "    return expr\n",
     "\n",
     "\n",
-    "@lru_cache(maxsize=None)\n",
+    "@cache\n",
     "def create_graph(expression, fig_size, visualize_cse):\n",
     "    if fig_size == \"full\":\n",
     "        fig_size = None\n",
