--- a/2021.11.29/ampform.ipynb
+++ b/2021.11.29/ampform.ipynb
@@ -30,15 +30,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "!uv pip install -q 'ampform[viz]==0.11.*'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "metadata": {
     "jupyter": {
      "source_hidden": true
@@ -46,14 +37,12 @@
    },
    "outputs": [],
    "source": [
-    "%load_ext autoreload\n",
-    "%autoreload\n",
     "import ampform\n",
     "import graphviz\n",
     "import qrules\n",
     "import symplot\n",
     "import sympy as sp\n",
-    "from ampform.dynamics import BlattWeisskopfSquared, CoupledWidth\n",
+    "from ampform.dynamics import BlattWeisskopfSquared, EnergyDependentWidth\n",
     "from ampform.dynamics.builder import (\n",
     "    create_analytic_breit_wigner,\n",
     "    create_relativistic_breit_wigner_with_ff,\n",
@@ -224,7 +213,7 @@
     "\n",
     "A_step1 = some_amplitude\n",
     "A_step2 = symplot.partial_doit(A_step1, (BlattWeisskopfSquared, WignerD))\n",
-    "A_step2 = symplot.partial_doit(A_step2, CoupledWidth)\n",
+    "A_step2 = symplot.partial_doit(A_step2, EnergyDependentWidth)\n",
     "substitutions = {\n",
     "    sp.Symbol(\"m_0\", real=True): PDG[\"K0\"].mass,\n",
     "    sp.Symbol(\"m_1\", real=True): PDG[\"K-\"].mass,\n",
@@ -269,9 +258,9 @@
    "toc_visible": true
   },
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Pyproject Local",
    "language": "python",
-   "name": "python3"
+   "name": "pyproject_local_kernel"
   },
   "language_info": {
    "codemirror_mode": {
@@ -283,7 +272,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.19"
+   "version": "3.9.18"
   }
  },
  "nbformat": 4,
