--- a/2021.12.13/qrules.ipynb
+++ b/2021.12.13/qrules.ipynb
@@ -26,17 +26,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!uv pip install -q 'qrules[viz]==0.9.*'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%load_ext autoreload\n",
-    "%autoreload\n",
     "import graphviz\n",
     "import qrules"
    ]
@@ -145,9 +134,9 @@
    "toc_visible": true
   },
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Pyproject Local",
    "language": "python",
-   "name": "python3"
+   "name": "pyproject_local_kernel"
   },
   "language_info": {
    "codemirror_mode": {
@@ -159,7 +148,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.19"
+   "version": "3.9.18"
   }
  },
  "nbformat": 4,
