--- a/2021.12.13/tensorwaves-optimized-expression.ipynb
+++ b/2021.12.13/tensorwaves-optimized-expression.ipynb
@@ -32,15 +32,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "!uv pip install -q 'ampform[viz]==0.12.*' 'tensorwaves[jax,pwa]==0.4.*' 'tensorflow==2.12.*' matplotlib"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "metadata": {
     "jupyter": {
      "source_hidden": true
@@ -48,8 +39,6 @@
    },
    "outputs": [],
    "source": [
-    "%load_ext autoreload\n",
-    "%autoreload\n",
     "%config InlineBackend.figure_formats = ['svg']\n",
     "import logging\n",
     "import re\n",
@@ -572,9 +561,9 @@
    "toc_visible": true
   },
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Pyproject Local",
    "language": "python",
-   "name": "python3"
+   "name": "pyproject_local_kernel"
   },
   "language_info": {
    "codemirror_mode": {
@@ -586,7 +575,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.19"
+   "version": "3.9.18"
   }
  },
  "nbformat": 4,
