MAINT: update syntax to Python 3.11

--- a/2021.11.29/ampform.ipynb
+++ b/2021.11.29/ampform.ipynb
@@ -206,7 +206,7 @@
     "    for node in sp.preorder_traversal(expression):\n",
     "        if node.free_symbols:\n",
     "            continue\n",
-    "        if isinstance(node, (float, sp.Float)):\n",
+    "        if isinstance(node, float | sp.Float):\n",
     "            expression = expression.xreplace({node: node.n(n_decimals)})\n",
     "    return expression\n",
     "\n",
@@ -272,7 +272,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.18"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
