--- a/2021.12.13/ampform.ipynb
+++ b/2021.12.13/ampform.ipynb
@@ -215,7 +215,7 @@
     "    for node in sp.preorder_traversal(expression):\n",
     "        if node.free_symbols:\n",
     "            continue\n",
-    "        if isinstance(node, (float, sp.Float)):\n",
+    "        if isinstance(node, float | sp.Float):\n",
     "            expression = expression.xreplace({node: node.n(n_decimals)})\n",
     "    return expression\n",
     "\n",
@@ -281,7 +281,7 @@
    "outputs": [],
    "source": [
     "aliases = [\"phi\", \"a(0)(980)\", \"a(0)(1450)\", \"full model\"]\n",
-    "amplitudes = dict(zip(aliases, model.components.values()))\n",
+    "amplitudes = dict(zip(aliases, model.components.values(), strict=True))\n",
     "\n",
     "\n",
     "def partial_doit(expr, classes):\n",
@@ -508,7 +508,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.18"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
