--- a/2021.11.29/tensorwaves.ipynb
+++ b/2021.11.29/tensorwaves.ipynb
@@ -384,7 +384,7 @@
     "\n",
     "legend = ax2.legend(loc=(0.77, 0.43))\n",
     "legend.get_frame().set_alpha(None)\n",
-    "for par, line in zip(initial_parameters, ax2.get_lines()):\n",
+    "for par, line in zip(initial_parameters, ax2.get_lines(), strict=True):\n",
     "    label = line.get_label()\n",
     "    color = line.get_color()\n",
     "    ax2.axhline(\n",
@@ -416,7 +416,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.18"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
