--- a/2021.12.13/ampform.ipynb
+++ b/2021.12.13/ampform.ipynb
@@ -30,15 +30,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "!uv pip install -q 'ampform[viz]==0.12.*'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "metadata": {
     "jupyter": {
      "source_hidden": true
@@ -46,9 +37,7 @@
    },
    "outputs": [],
    "source": [
-    "%load_ext autoreload\n",
-    "%autoreload\n",
-    "from functools import lru_cache\n",
+    "from functools import cache\n",
     "\n",
     "import ampform\n",
     "import graphviz\n",
@@ -226,7 +215,7 @@
     "    for node in sp.preorder_traversal(expression):\n",
     "        if node.free_symbols:\n",
     "            continue\n",
-    "        if isinstance(node, (float, sp.Float)):\n",
+    "        if isinstance(node, float | sp.Float):\n",
     "            expression = expression.xreplace({node: node.n(n_decimals)})\n",
     "    return expression\n",
     "\n",
@@ -292,7 +281,7 @@
    "outputs": [],
    "source": [
     "aliases = [\"phi\", \"a(0)(980)\", \"a(0)(1450)\", \"full model\"]\n",
-    "amplitudes = dict(zip(aliases, model.components.values()))\n",
+    "amplitudes = dict(zip(aliases, model.components.values(), strict=True))\n",
     "\n",
     "\n",
     "def partial_doit(expr, classes):\n",
@@ -304,7 +293,7 @@
     "    return expr\n",
     "\n",
     "\n",
-    "@lru_cache(maxsize=None)\n",
+    "@cache\n",
     "def get_amplitude(\n",
     "    name,\n",
     "    doit,\n",
@@ -327,7 +316,7 @@
     "    return expr\n",
     "\n",
     "\n",
-    "@lru_cache(maxsize=None)\n",
+    "@cache\n",
     "def create_graph(expression, fig_size, visualize_cse):\n",
     "    if fig_size == \"full\":\n",
     "        fig_size = None\n",
@@ -505,9 +494,9 @@
    "toc_visible": true
   },
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Pyproject Local",
    "language": "python",
-   "name": "python3"
+   "name": "pyproject_local_kernel"
   },
   "language_info": {
    "codemirror_mode": {
@@ -519,7 +508,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.19"
+   "version": "3.12.6"
   }
  },
  "nbformat": 4,
