--- a/2021.12.13/tensorwaves-caching.ipynb
+++ b/2021.12.13/tensorwaves-caching.ipynb
@@ -32,15 +32,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "!uv pip install -q 'ampform[viz]==0.12.*' 'tensorwaves[jax,pwa]==0.4.*' 'tensorflow==2.12.*' matplotlib"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "metadata": {
     "jupyter": {
      "source_hidden": true
@@ -48,8 +39,6 @@
    },
    "outputs": [],
    "source": [
-    "%load_ext autoreload\n",
-    "%autoreload\n",
     "%config InlineBackend.figure_formats = ['svg']\n",
     "import logging\n",
     "import re\n",
@@ -701,7 +690,7 @@
     "\n",
     "legend = ax2.legend(loc=(0.77, 0.43))\n",
     "legend.get_frame().set_alpha(None)\n",
-    "for par, line in zip(initial_parameters, ax2.get_lines()):\n",
+    "for par, line in zip(initial_parameters, ax2.get_lines(), strict=True):\n",
     "    label = line.get_label()\n",
     "    color = line.get_color()\n",
     "    ax2.axhline(\n",
@@ -719,9 +708,9 @@
    "toc_visible": true
   },
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Pyproject Local",
    "language": "python",
-   "name": "python3"
+   "name": "pyproject_local_kernel"
   },
   "language_info": {
    "codemirror_mode": {
@@ -733,7 +722,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.19"
+   "version": "3.12.6"
   }
  },
  "nbformat": 4,
