MAINT: update kernel Python versions

--- a/2021.11.29/ampform.ipynb
+++ b/2021.11.29/ampform.ipynb
@@ -258,7 +258,7 @@
    "toc_visible": true
   },
   "kernelspec": {
-   "display_name": "Pyproject Local",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "pyproject_local_kernel"
   },
