--- a/2021.12.13/tensorwaves-optimized-expression.ipynb
+++ b/2021.12.13/tensorwaves-optimized-expression.ipynb
@@ -561,7 +561,7 @@
    "toc_visible": true
   },
   "kernelspec": {
-   "display_name": "Pyproject Local",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "pyproject_local_kernel"
   },
