MAINT: update developer configuration

--- a/2021.11.29/tensorwaves.ipynb
+++ b/2021.11.29/tensorwaves.ipynb
@@ -402,7 +402,7 @@
    "toc_visible": true
   },
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Pyproject Local",
    "language": "python",
    "name": "pyproject_local_kernel"
   },
