--- a/2021.12.13/ampform.ipynb
+++ b/2021.12.13/ampform.ipynb
@@ -494,7 +494,7 @@
    "toc_visible": true
   },
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Pyproject Local",
    "language": "python",
    "name": "pyproject_local_kernel"
   },
